# dialogLLM

./: .coverage  .env  .gitignore  .windsurfrules  .windsurfrules.md  README.md  pyproject.toml  requirements.txt  trace.txt
design/: IDEA.md  MVP_IMPLEMENTATION_PLAN.md  feedback.md
prompts/: master_template.xml  metaprompts.md  setup_and_run.md
src/: main.py  worker.py
src/dialogllm/: __init__.py
src/dialogllm/analysis/: analysis_utils.py  performance_calculators.py  report_generation.py  visualization_helpers.py
src/dialogllm/core/: __init__.py  client.py  connection.py  health.py  persona_parser.py  runner.py
src/dialogllm/llm/: client.py  llm_provider_manager.py  monitoring.py
src/dialogllm/models/: __init__.py  base.py  conversation.py  dialogue.py  llm.py  queue.py
src/dialogllm/queue/: __init__.py  conversation_manager.py
src/dialogllm/utils/: errors.py  logger.py  metrics.py  state_manager.py  timer.py
tests/: __init__.py  conftest.py  test_example.py
tests/analysis/: __init__.py  test_analysis_utils.py  test_performance_calculators.py  test_report_generation.py  test_visualization_helpers.py
tests/core/: test_client.py  test_client_additional.py  test_connection.py  test_core.py  test_health.py  test_persona_parser.py  test_runner.py
tests/llm/: __init__.py  test_client.py  test_llm_provider_manager.py  test_monitoring.py
tests/models/: __init__.py  test_models.py
tests/queue/: test_conversation_manager.py
tests/utils/: __init__.py  test_errors.py  test_logger.py  test_logger_comprehensive.py  test_metrics.py  test_state_manager.py  test_timer.py
