[build-system]
requires = ["hatchling", "pathspec>=0.11.0"]
build-backend = "hatchling.build"

[project]
name = "dialogllm"
version = "0.1.0"
authors = [
  { name="DialogueLLM Team" },
]
description = "A system for facilitating continuous conversations between LLMs"
readme = "README.md"
requires-python = ">=3.10,<4.0" # Allow Python 3.10 and above
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis>=5.0.1",
    "pydantic>=2.5.3",
    "ollama>=0.1.6",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=src/dialogllm --cov-report=term-missing --no-cov-on-fail --cov-branch"
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
